manifests/02_BlueGreen/service-blue.yaml
apiVersion: v1
kind: Service
metadata:
  name: bluegreen-demo-blue
  labels:
    app: bluegreen-demo
spec:
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
  selector:
    app: bluegreen-demo
